--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ Homepage = "https://github.com/est/mtapy"
 Repository = "https://github.com/est/mtapy"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/mtapy"]
+packages = ["mtapy"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
